kubernetes-gitea-ingress/work/hydra-dep-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-hydra
spec:
  selector:
    matchLabels:
      run: my-hydra-pod
  replicas: 1
  template:
    metadata:
      labels:
        run: my-hydra-pod
    spec:
      containers:
      - name: my-hydra-container
        image: oryd/hydra:v1.7.4
        command: ['hydra']
        args: ['serve', 'all', '--dangerous-force-http']
        ports:
        - containerPort: 4444
          name: publicport
        - containerPort: 4445
          name: adminport
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: my-hydra-service
  labels:
    run: my-hydra-pod
spec:
  #type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: publicport
    targetPort: 4444
    #nodePort: 30044
  - port: 4445
    protocol: TCP
    name: adminport
    targetPort: 4445
    #nodePort: 30045
  selector:
    run: my-hydra-pod
